# planetwars.dev

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust-tests.yml
backend/: Cargo.toml
backend/migrations/2021-12-13-145111_users/: down.sql  up.sql
backend/migrations/2021-12-18-130837_bots/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/db/: bots.rs  mod.rs  sessions.rs  users.rs
backend/src/routes/: bots.rs  mod.rs  users.rs
backend/tests/: bots.rs  common.rs  login.rs
backend/tests/util/: mod.rs
planetwars-cli/: Cargo.toml  README.md
planetwars-cli/assets/: pw_project.toml  pw_workspace.toml
planetwars-cli/assets/simplebot/: botconfig.toml
planetwars-cli/src/: lib.rs
planetwars-cli/src/commands/: build.rs  init.rs  mod.rs  run_match.rs  serve.rs
planetwars-cli/src/match_runner/: bot_runner.rs  mod.rs
planetwars-cli/src/web/: mod.rs
planetwars-cli/src/workspace/: bot.rs  mod.rs
planetwars-client/: Cargo.toml  README.md  build.rs  simplebot.toml
planetwars-client/src/: main.rs
planetwars-localdev/: Cargo.toml  README.md
planetwars-localdev/src/: lib.rs
planetwars-localdev/src/match_runner/: mod.rs  pw_match.rs
planetwars-localdev/src/web/: mod.rs
planetwars-matchrunner/: Cargo.toml
planetwars-matchrunner/bots/: crash_bot.py  echo_bot.py  timeout_bot.py
planetwars-matchrunner/bots/broken_bot/: bot.py
planetwars-matchrunner/maps/: abc.json
planetwars-matchrunner/src/: bot_runner.rs  docker_runner.rs  lib.rs  match_context.rs  match_log.rs  pw_match.rs
planetwars-matchrunner/tests/: test_matchrunner.rs
planetwars-rules/: Cargo.toml
planetwars-rules/src/: config.rs  lib.rs  protocol.rs  rules.rs  serializer.rs
planetwars-server/: Cargo.toml  Rocket.toml  build.rs  configuration.toml  diesel.toml
planetwars-server/migrations/2021-12-13-145111_users/: down.sql
planetwars-server/migrations/2021-12-13-151129_sessions/: up.sql
planetwars-server/migrations/2021-12-18-130837_bots/: down.sql  up.sql
planetwars-server/migrations/2022-01-02-105610_matches/: down.sql  up.sql
planetwars-server/migrations/2022-04-28-171349_create_rating/: down.sql  up.sql
planetwars-server/migrations/2022-05-29-085905_add_winner_to_matches/: down.sql  up.sql
planetwars-server/migrations/2022-06-10-180418_nullable_match_player_code_bundle/: down.sql  up.sql
planetwars-server/migrations/2022-07-04-200149_code_bundle_to_bot_version/: down.sql  up.sql
planetwars-server/migrations/2022-07-23-131936_bot_active_version/: down.sql  up.sql
planetwars-server/migrations/2022-07-30-145155_add_public_to_matches/: down.sql  up.sql
planetwars-server/migrations/2022-08-23-174628_maps/: down.sql  up.sql
planetwars-server/migrations/2022-10-13-195242_add_had_errors_to_match_players/: down.sql  up.sql
planetwars-server/migrations/2022-11-21-135622_add_is_ranked_to_maps/: down.sql  up.sql
planetwars-server/src/: cli.rs  db_types.rs  lib.rs  main.rs  schema.patch  schema.rs  util.rs
planetwars-server/src/db/: bots.rs  maps.rs  match_queries.rs  matches.rs  mod.rs  ratings.rs  sessions.rs  users.rs
planetwars-server/src/modules/: bot_api.rs  bots.rs  client_api.rs  matches.rs  mod.rs  ranking.rs  registry.rs
planetwars-server/src/routes/: bots.rs  demo.rs  maps.rs  matches.rs  mod.rs  users.rs
planetwars-server/tests/: integration.rs
proto/: bot_api.proto  client_api.proto
simplebot/: simplebot.py
web/planetwars-rs/: .gitignore  Cargo.toml
web/planetwars-rs/src/: lib.rs  utils.rs
web/pw-frontend/: .editorconfig  index.html  package.json  tsconfig.json  vite.config.js
web/pw-frontend/planetwars-rs/: Cargo.toml
web/pw-frontend/planetwars-rs/src/: types.rs
web/pw-frontend/public/static/shaders/frag/: vor.glsl
web/pw-frontend/public/static/shaders/vert/: vor.glsl
web/pw-frontend/src/: App.svelte  main.ts
web/pw-frontend/src/lib/: MatchBrowser.svelte  Visualizer.svelte
web/pw-frontend/src/lib/visualizer/: README.md
web/pw-frontend/src/lib/visualizer/voronoi/: voronoi.ts
web/pw-frontend/src/lib/visualizer/webgl/: buffer.ts  index.ts
web/pw-server/: .prettierrc  package.json  svelte.config.js
web/pw-server/src/: app.html  global.d.ts  hooks.js
web/pw-server/src/assets/: bot_template.txt
web/pw-server/src/lib/: api_client.ts  api_types.ts  auth.ts  bot_code.ts  constants.ts  log_parser.ts  matches.ts  utils.ts
web/pw-server/src/lib/components/: Editor.svelte  EditorView.svelte  Leaderboard.svelte  LinkButton.svelte  NavTab.svelte  OutputPane.svelte  PlayerLog.svelte  RulesView.svelte  SubmitPane.svelte  Visualizer.svelte
web/pw-server/src/lib/stores/: current_user.ts  editor_state.ts
web/pw-server/src/routes/: __layout.svelte  docs.svelte  editor.svelte  index.svelte  leaderboard.svelte  login.svelte  register.svelte  style.css
web/pw-server/src/routes/bots/: [bot_id].svelte  [bot_name].svelte  index.svelte  new.svelte
web/pw-server/src/routes/code/: [bundle_id].svelte
web/pw-server/src/routes/docs/: __layout.svelte  doc.svelte  index.svelte  local-development.md  rules.md
web/pw-server/src/routes/matches/: [match_id].svelte  index.svelte  new.svelte
web/pw-server/src/routes/submission_matches/: [match_id].svelte
web/pw-server/src/routes/users/: [user_name].svelte
web/pw-server/src/styles/: account_forms.scss  buttons.scss  global.scss  markdown.scss  prism.scss  variables.scss
web/pw-visualizer/: package.json  tsconfig.json  vite.config.js
web/pw-visualizer/assets/res/: planet_atlas.json
web/pw-visualizer/assets/res/fonts/: roboto.json
web/pw-visualizer/assets/shaders/frag/: image.glsl  masked_image.glsl  msdf.glsl  simple.glsl
web/pw-visualizer/assets/shaders/vert/: image.glsl  simple.glsl
web/pw-visualizer/src/: LICENSE-MIT  asset_files.ts  assets.ts  index.html  index.ts  style.css
web/pw-visualizer/src/src/: games.ts
web/pw-visualizer/src/voronoi/: voronoi-core.js
web/pw-visualizer/src/webgl/: index.ts  msdf_text.ts  renderer.ts  shader.ts  text.ts  texture.ts  util.ts  vertexBufferLayout.ts
(+12 files in other folders)
