[package]
name = "planetwars-client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
prost = "0.10"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
