[package]
name = "planetwars-server"
version = "0.0.0"
edition = "2021"
default-run = "planetwars-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "planetwars-server"
path = "src/main.rs"

[[bin]]
name = "planetwars-server-cli"
path = "src/cli.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1.15", features = ["full"] }
tokio-stream = "0.1.9"
hyper = "0.14"
axum = { version = "0.5", features = ["json", "headers", "multipart"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
bb8 = "0.7"
bb8-diesel = "0.2"
dotenv = "0.15.0"
rust-argon2 = "0.8"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
base64 = "0.13.0"
zip = "0.5"
toml = "0.5"
planetwars-matchrunner = { path = "../planetwars-matchrunner" }
config = { version = "0.12", features = ["toml"] }
thiserror = "1.0.31"
sha2 = "0.10"
tokio-util = { version="0.7.3", features=["io"] }
prost = "0.10"
tonic = "0.7.2"
clap = { version = "3.2", features = ["derive", "env"]}

# TODO: remove me
shlex = "1.1"

[build-dependencies]
tonic-build = "0.7.2"

[dev-dependencies]
parking_lot = "0.11"
